feat: triển khai module organization
